Cambios Login y Sign Up
Se han realizado cambios en todos los archivos y se a agregado archivo Validation.js que contiene funciones para validar datos

--- a/Login_Sign Up/css/style.css
+++ b/Login_Sign Up/css/style.css
@@ -1,9 +1,9 @@
-:root{
+/*:root{
     --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
     'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
     'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
     --transition: all 0.1s cubic-bezier(0.645, 0.045, 0.355, 1)
-}
+}*/
 
 * {
     margin:0;
@@ -12,7 +12,7 @@
 }
 
 body{
-    font-family: var(--font-mono);
+    /*font-family: var(--font-mono);*/
 }
 
 section{
@@ -65,7 +65,7 @@ section form input[type='submit']{
     margin-top: 1.5em;
     background-color: #003DFF;
     color: #fff;
-    font-family: var(--font-mono);
+   /* font-family: var(--font-mono);*/
     transition: var(--transition);
 } 
 
@@ -90,7 +90,7 @@ section p a{
 section button{
     background-color: #003DFF;
     color: #fff;
-    font-family: var(--font-mono);
+    /*font-family: var(--font-mono);*/
     transition: var(--transition);
     border: none;
     padding: 0.5em 1em;
@@ -98,3 +98,7 @@ section button{
     margin-top: 1.5em;
     font-size: 1em;
 }
+.error-message {
+    color: red;
+    margin-top: 10px;
+  }
