--- a/Login_Sign Up/css/styles.css
+++ b/Login_Sign Up/css/styles.css
@@ -1517,3 +1517,53 @@ p, h1, h2, h3, h4, div, form, select, input, label, span, a {
 }
 
 /*# sourceMappingURL=styles.css.map */
+
+
+/* para lo de publicaiones  */
+
+.contenido{
+  margin-top: 50px;
+  width: auto;
+
+}
+.contenido a{
+
+  display: block;
+  color: #ffffff;
+  padding: 10px;
+  text-decoration: none;
+  float: right;
+
+}
+
+
+.toolbar {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  background-color: #0A4D68;
+  position: relative;
+  height: auto;
+}
+
+.toolbar a {
+  display: block;
+  color: #ffffff;
+  padding: 10px;
+  text-decoration: none;
+  float: right;
+}
+
+
+.content{
+  flex-grow: 31;
+  
+}
+
+.acciones a{
+  padding: 10px;
+  text-decoration: none;
+ 
+}
+
+
