Conciliacion de codigo del inicio o  'Home' y las funcionalidades basicas de posts y comentarios, entre otros.

--- a/css/sass/utilities/justifi.scss
+++ b/css/sass/utilities/justifi.scss
@@ -1,5 +1,7 @@
 //MARGIN
-
+.margin-0{
+    margin: 0px;
+}
 .margin-1{
     margin: 10px;
 }
@@ -159,6 +161,9 @@
     margin-top: 100px;
 }
 //PADDING
+.padding-0{
+    padding: 0px;
+}
 
 .padding-1{
     padding: 10px;
