--- a/css/sass/utilities/rounded.scss
+++ b/css/sass/utilities/rounded.scss
@@ -138,17 +138,17 @@
     border-radius: 100%;
 }
 .border{
-    border: 1px solid $color-1;
+    border: 1px solid $color_1;
 }
 .border-bottom{
-    border-bottom: 1px solid $color-1;
+    border-bottom: 1px solid $color_1;
 }
 .border-top{
-    border-top: 1px solid $color-1;
+    border-top: 1px solid $color_1;
 }
 .border-left{
-    border-left: 1px solid $color-1;
+    border-left: 1px solid $color_1;
 }
 .border-rigth{
-    border-right: 1px solid $color-1;
+    border-right: 1px solid $color_1;
 }
