Cambios en diseño general
Subo cambios en estilos y revisar todo el proyecto para verificar que el funcionamiento este bien

--- a/css/home.css
+++ b/css/home.css
@@ -237,6 +237,9 @@ article img{
     width: 100%;
     margin-top: 20px;
 }
+p{
+    text-align: justify;
+}
 /*Fin de estilos para el contenido del blog*/
 
 /*Inicio de los estilos para los articulos del blog*/
