--- a/css/sass/tools/side_bar.scss
+++ b/css/sass/tools/side_bar.scss
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
     width: 250px;
-    background-color: $color-4;
+    //background-color: $color-4;
     position: fixed;
     height: 100%;
     overflow: auto;
@@ -17,17 +17,17 @@
   }
   .sidebar h3 {
     display: block;
-    background-color: $color-2;
+    //background-color: $color-2;
     color: $color-ligth;
     padding: 15px;
     text-decoration: none;
   }
   .sidebar a.active {
-    background-color: $color-1;
+    //background-color: $color-1;
     color: $color_text;
   }
   .sidebar a:hover:not(.active) {
-    background-color: $color-4;
+    //background-color: $color-4;
     color: white;
   }
   
@@ -55,8 +55,8 @@
   margin: 0;
   padding: 0;
   width: 100%;
-  background-color: $color-4;
-  position: relative;
+  //background-color: $color-4;
+  position: fixed;
   height: auto;
 }
 
@@ -75,11 +75,11 @@
   text-decoration: none;
 }
 .toolbar a.active {
-  background-color: $color-1;
+  //background-color: $color-1;
   color: $color_text;
 }
 .toolbar a:hover:not(.active) {
-  background-color: $color-4;
+  //background-color: $color-4;
   color: white;
 }
 
